ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/navigation2.less
@media (min-width: 1024px) {
  .navigation {
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 0;

    .cmp-navigation {
      overflow: auto;
      padding-inline: 1.25rem;

      &-filter__wrapper {
        padding-inline: 1.25rem;
      }

      &::-webkit-scrollbar {
        width: 6px;
      }

      &::-webkit-scrollbar-track {
        border-radius: 0.39rem;
      }

      &::-webkit-scrollbar-thumb {
        background: var(--border-common);
        border-radius: 0.39rem;
      }

      &::-webkit-scrollbar-thumb:hover {
        background: var(--light-grey-border);
      }
    }
  }
}

#gu-nav.show {
    .navigation {
        .navigation-title {
			display:block;
        }
    }
}
html.adobeguides-text-size {
  .navigation {
    .cmp-navigation {
      overflow: auto;
      padding: 0 20px;
    }
  }
}
html#adobeguides-dark-contrast{
    .navigation {
        .cmp-navigation-filter-container {
            .cmp-navigation-filter__section {
                   background: #171c21;
                   border: 1px solid #43464a;

            }
            input {
                color: #fff;
            }
        }
    }
}
html#adobeguides-dark-contrast{
    .navigation {
        .cmp-navigation-filter-container {
            .cmp-navigation-filter__section {
                   background: #171c21;
                   border: 1px solid #43464a;

            }
        }
    }
}

